fix: make resource cards and resource type cards grid-like on small screens

--- a/content/themes/ea/blocks/link-tiles/block.scss
+++ b/content/themes/ea/blocks/link-tiles/block.scss
@@ -15,13 +15,20 @@
 
 .link-tiles__items {
   @include structural_ul;
-  display: flex;
   margin-right: -$grid-gap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .link-tiles__item {
-  flex: 0 0 calc(((1 / 4) * 100%) - #{$grid-gap});
   margin-right: $grid-gap;
+  margin-bottom: $grid-gap;
+  flex: 0 0 calc(((1 / 2) * 100%)- #{$grid-gap});
+  
+  @include break-min($md) {
+    margin-bottom: 0;
+    flex: 0 0 calc(((1 / 4) * 100%) - #{$grid-gap});
+  }
 }
 
 .link-tile {
